// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton computed disabled, none, Value A infoText 1`] = `""`;

exports[`RadioButton computed disabled, none, Value A labelText 1`] = `""`;

exports[`RadioButton computed disabled, none, Value A states 1`] = `
Object {
  "checked": false,
  "disabled": true,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed disabled, none, Value B infoText 1`] = `""`;

exports[`RadioButton computed disabled, none, Value B labelText 1`] = `""`;

exports[`RadioButton computed disabled, none, Value B states 1`] = `
Object {
  "checked": false,
  "disabled": true,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed disabled, something, Value A infoText 1`] = `""`;

exports[`RadioButton computed disabled, something, Value A labelText 1`] = `""`;

exports[`RadioButton computed disabled, something, Value A states 1`] = `
Object {
  "checked": false,
  "disabled": true,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed disabled, something, Value B infoText 1`] = `""`;

exports[`RadioButton computed disabled, something, Value B labelText 1`] = `""`;

exports[`RadioButton computed disabled, something, Value B states 1`] = `
Object {
  "checked": false,
  "disabled": true,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed none, Value A infoText 1`] = `""`;

exports[`RadioButton computed none, Value A labelText 1`] = `""`;

exports[`RadioButton computed none, Value A states 1`] = `
Object {
  "checked": false,
  "disabled": false,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed none, Value B infoText 1`] = `""`;

exports[`RadioButton computed none, Value B labelText 1`] = `""`;

exports[`RadioButton computed none, Value B states 1`] = `
Object {
  "checked": false,
  "disabled": false,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed something, Value A infoText 1`] = `""`;

exports[`RadioButton computed something, Value A labelText 1`] = `""`;

exports[`RadioButton computed something, Value A states 1`] = `
Object {
  "checked": false,
  "disabled": false,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed something, Value B infoText 1`] = `""`;

exports[`RadioButton computed something, Value B labelText 1`] = `""`;

exports[`RadioButton computed something, Value B states 1`] = `
Object {
  "checked": false,
  "disabled": false,
  "error": false,
  "focused": false,
  "warning": false,
}
`;
